test(service): comprehensive StatementServiceTest for CBSTM03A orchestration
Expand StatementServiceTest into a 12-test, 4-nested-class suite covering the
Java port of CBSTM03A.CBL 1000-MAINLINE statement orchestration:

- StatementAssembly (4): customer+account+transactions assembly, no-transactions
  edge (WS-TOTAL-AMT=0.00), repository-order preservation, scale-2 running total (PR-16)
- HtmlGeneration (2): renderFullStatement invoked with assembled data; htmlOutput
  returned verbatim (PR-09 - service synthesizes no markup)
- BuildAllStatements (3): one statement per xref via bulk findAll prefetch with
  F10 N+1 verification (findAll times(1), per-row finders never()), empty-xref case,
  missing prefetched account abort
- ErrorHandling (3): missing customer/account raise IllegalStateException carrying
  the F9-masked PAN (************NNNN) and never the full card number

Tests target the actual StatementService API (buildStatementForXref/buildAllStatements,
StatementResult record, renderFullStatement, findByCardNum) and assert IllegalStateException.
Preserves prior CP3 F9 masking + F10 prefetch coverage. All 12 pass; module test-compile clean.